--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,10 @@
         }
     ],
     "require": {
-        "php": "^7.1"
+        "php": "^7.1",
+        "paquettg/php-html-parser": "dev-dev",
+        "laravel/dusk": "^2.0",
+        "illuminate/support": "*"
     },
     "require-dev": {
         "phpunit/phpunit": "^6.0"
