--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,9 @@
         "php": "^7.1",
         "paquettg/php-html-parser": "dev-dev",
         "laravel/dusk": "*",
-        "illuminate/support": "*"
+        "illuminate/support": "*",
+        "voku/simple_html_dom": "^4.1",
+        "voku/portable-utf8": "^5.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^6.0"
