--- a/composer.json
+++ b/composer.json
@@ -35,5 +35,6 @@
         "psr-4": {
             "WeblaborMX\\ScrappingPlus\\Tests\\": "tests"
         }
-    }
+    },
+    "minimum-stability": "dev"
 }
