--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
         }
     ],
     "require": {
-        "php": "^7.1",
+        "php": ">=7.1",
         "paquettg/php-html-parser": "*",
         "laravel/dusk": "*",
         "illuminate/support": "*",
@@ -24,7 +24,7 @@
         "voku/portable-utf8": "^5.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^6.0"
+        "phpunit/phpunit": ">=6.0"
     },
     "autoload": {
         "psr-4": {
